# alumet

plugin-amdgpu/: Cargo.toml  README.md
plugin-amdgpu/src/: lib.rs
plugin-amdgpu/src/amd/: error.rs  metric.rs  mod.rs  probe.rs  utils.rs
plugin-amdgpu/testbench/: Makefile  kernel.cl  main.c
plugins/amd-gpu/: Cargo.toml
plugins/amd-gpu/src/: lib.rs
plugins/amd-gpu/src/amd/: device.rs  error.rs  features.rs  probe.rs  utils.rs
plugins/amd-gpu/src/tests/: fakeplugin.rs
plugins/amd-gpu/src/tests/common/: ffi_mock.rs
