[package]
name = "plugin-amdgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
gethostname = "0.5.0"
log = "0.4.22"
tokio = "1.40.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.1.1"
notify = "6.1.1"
base64 = "0.22.1"
regex = "1.11.1"
amdsmi = { git = "https://github.com/mcharles-brcm/amdsmi", rev = "8e454950ef9713b4316ccea5dcf06983ad5ea822" }
openssl = { version = "0.10", features = ["vendored"] }

[lints]
workspace = true
