[package]
name = "plugin-amd-gpu"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
alumet.workspace = true
anyhow.workspace = true
log.workspace = true
humantime-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
amdsmi = { git = "https://github.com/ROCm/amdsmi.git", rev = "51a44bc0c456884f3f0c901cfa2aa3e0095a7d01" }

[dev-dependencies]
alumet = { workspace = true, features = ["test"] }
toml.workspace = true

[lints]
workspace = true
